[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "fedmsg_meta_umb"
version = "0.1.0"
authors = [
    {name = "Mike Bonnet", email = "mikeb@redhat.com"},
]
requires-python = ">=3.12"
dynamic = [
    "dependencies",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "fedmsg metadata providers for services on Red Hat's Unified Message Bus"
license = {file = "LICENSE", content-type = "text/plain"}
readme = {file = "README.rst", content-type = "text/x-rst"}

[project.entry-points."fedmsg.meta"]
brew = "fedmsg_meta_umb.brew:BrewProcessor"
rpmdiff = "fedmsg_meta_umb.rpmdiff:RPMDiffProcessor"
cips = "fedmsg_meta_umb.cips:CIPSProcessor"
distgit = "fedmsg_meta_umb.distgit:DistGitProcessor"
pub = "fedmsg_meta_umb.pub:PubProcessor"
errata = "fedmsg_meta_umb.errata:ErrataProcessor"
pungi = "fedmsg_meta_umb.pungi:PungiProcessor"
distill = "fedmsg_meta_umb.distill:DistillProcessor"
mbs = "fedmsg_meta_umb.mbs:MBSProcessor"
rhchi = "fedmsg_meta_umb.rhchi:RHCHIProcessor"
robosignatory = "fedmsg_meta_umb.robosignatory:RobosignatoryProcessor"
freshmaker = "fedmsg_meta_umb.freshmaker:FreshmakerProcessor"
odcs = "fedmsg_meta_umb.odcs:ODCSProcessor"
resultsdb = "fedmsg_meta_umb.resultsdb:ResultsDBProcessor"
metaxor = "fedmsg_meta_umb.metaxor:MetaXORProcessor"
greenwave = "fedmsg_meta_umb.greenwave:GreenwaveProcessor"
ci = "fedmsg_meta_umb.ci:CIProcessor"
jira = "fedmsg_meta_umb.jira:JIRAProcessor"
tower = "fedmsg_meta_umb.tower:TowerProcessor"
pnc = "fedmsg_meta_umb.pnc:ProjectNewCastleProcessor"
repotracker = "fedmsg_meta_umb.repotracker:RepotrackerProcessor"
waiverdb = "fedmsg_meta_umb.waiverdb:WaiverDBProcessor"
aqe-jenkins = "fedmsg_meta_umb.aqe_jenkins:AqeJenkinsProcessor"
clair = "fedmsg_meta_umb.clair:ClairProcessor"
snitch = "fedmsg_meta_umb.snitch:SnitchProcessor"
messagebusd = "fedmsg_meta_umb.messagebusd:MessagebusdProcessor"
cts = "fedmsg_meta_umb.cts:CTSProcessor"

[project.urls]
Homepage = "https://github.com/release-engineering/fedmsg_meta_umb"
Repository = "https://github.com/release-engineering/fedmsg_meta_umb.git"

[tool.setuptools]
packages = [
    "fedmsg_meta_umb",
    "fedmsg_meta_umb.tests",
]
dynamic.dependencies = {file = ["requirements.txt"]}

[tool.coverage]
run.branch = true
run.relative_files = true
run.source = [
    "fedmsg_meta_umb",
]
report.show_missing = true
report.skip_empty = true
